Added Clustername logics in EventController