@@ -7,6 +7,7 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import org.bson.BsonNull;
@@ -231,7 +232,9 @@ public class ClusterUtilizationHandler {
                                 .append("fileSystemAvailable", "$avgFileSystemAvailable")));
                 }
                 
-                List<Document> aggregatedList = Stream.concat(pipeline.stream(), groupPipeLine.stream()).toList();
+                // List<Document> aggregatedList = Stream.concat(pipeline.stream(), groupPipeLine.stream()).toList();
+                List<Document> aggregatedList = Stream.concat(pipeline.stream(), groupPipeLine.stream()).collect(Collectors.toList());
+
                 return aggregatedList;
         }
         public List<Document> matchPipeline(List<Document> pipeline,String clusterName,String nodeName){
@@ -247,7 +250,8 @@ public class ClusterUtilizationHandler {
                         matchPipeLine = Arrays.asList(new Document("$match", 
                         new Document("clusterName", clusterName)));
                 }
-                List<Document> matchFilter = Stream.concat(pipeline.stream(), matchPipeLine.stream()).toList();
+                // List<Document> matchFilter = Stream.concat(pipeline.stream(), matchPipeLine.stream()).toList();
+                List<Document> matchFilter = Stream.concat(pipeline.stream(), matchPipeLine.stream()).collect(Collectors.toList());
                 return matchFilter;
         }
 }
